# RISC-V-Simulator

./: .gitignore  CMakeLists.txt
include/: cpu.h  reflect.h  register.h
src/: alu.cpp  alu.hpp  bc.cpp  bc.hpp  decoder.cpp  decoder.hpp  dmem.cpp  dmem.hpp  executer.cpp  executer.hpp  fetch.cpp  fetch.hpp  imem.cpp  imem.hpp  lsb.cpp  lsb.hpp  main.cpp  memory.cpp  memory.hpp  opcode.hpp  pc.cpp  pc.hpp  predictor.cpp  predictor.hpp  reg.cpp  reg.hpp  regfile.hpp  rob.cpp  rob.hpp  rs.cpp  rs.hpp  util.hpp
